tests/scan/fixtures/validation/negative/clean_go_clean-file-watcher/go.mod
module github.com/example/clean-file-watcher
go 1.21
